# fin-qlib

./: .dockerignore  .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SECURITY.md  deploy.sh  docker-compose.yml  eci.yml  main.py  pyproject.toml  requirements.txt
checkpoints/: online_manager.pkl
config/: backtest_config.yaml  online_config.yaml  online_config_custom.yaml  online_config_docker.yaml  online_config_minimal.yaml  online_config_mlflow.yaml  online_config_simple.yaml  online_config_template.yaml
docs/: API_CLIENT_GUIDE.md  API_CLIENT_SUMMARY.md  API_QUICKSTART.md  API_SERVER.md  API_USAGE.md  BACKTEST_GUIDE.md  BACKTEST_QUICKSTART.md  BACKTEST_STATUS.md  CUSTOM_STRATEGY_GUIDE.md  DATA_SAMPLES_AND_TARGETS.md  HOW_TO_ADD_CUSTOM.md  MLFLOW_GUIDE.md  MLFLOW_QUICKSTART.md  PREDICTION_TIMING.md  QUICK_REFERENCE.md  QUICK_TEST.md  ROUTINE_EXECUTION_DETAIL.md  ROUTINE_TASKS_ANALYSIS.md  RollingStrategy_EXPLAINED.md  STRATEGY_COMPARISON.md  TASKPOOL_EXPLAINED.md  TRAINER_COMPARISON.md
examples/: custom_handler_example.py  custom_strategy_example.py  prediction_service_example.py
fqlib/: __init__.py  api_client.py  api_models.py  api_server.py  ensemble.py  instruments_helper.py  managed_manager.py  mlflow_integration.py  prediction_service.py  quick_manager.py  run_backtest.py  scripts_helper.py  util.py
scripts/: check_data_range.py  check_stock_pools.py  clean_and_retrain.py  cleanup_temp.py  daily_fetch_prediction.py  evaluate.py  first_run.py  first_run_mlflow.py  get_signals.py  make_executable.sh  (+15 more)
(+2 files in other folders)
