[project]
name = "fin-qlib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pyyaml>=6.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.setuptools]
packages = ["fqlib"]

[tool.setuptools.package-data]
"fqlib" = ["py.typed"]
